2008-05-06  Rodrigo Kumpera  <rkumpera@novell.com>

	* driver.c (mono_main): Revert r102623. The right
	thing to do is to enable the verifier under verifiable
	unless a --security flag was passed.

	We need this non-trivial behavior for --verify-all otherwise
	mcs-compileall won't be able to use it. As it needs everything to
	be verified under validil.

2008-05-06  Martin Baulig  <martin@ximian.com>

	Fix #383749.

	* debug-mini.c (mono_debugger_thread_created): Add proper locking.
	(mono_debugger_thread_cleanup): Likewise.
	(mono_debugger_extended_notification): Likewise.

2008-05-06  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini.c (mono_method_to_ir): Verify visibility of call related opcodes
	against both inflated and non-inflated methods. We need to check against the
	generic definition for cases where the instantiated method is not visible.
	We need to check against the inflated types for cases where the instantiation
	changes any super type. This fixes #382986.

	Note that this doesn't need to be applied to other parts of mono_method_to_ir
	that check for visibiliy as generic params only appears as the type subject
	of tokens on call opcodes. Field manipulation and ldftn must always
	target an exact type.

2008-05-06  Rodrigo Kumpera  <rkumpera@novell.com>

	* driver.c (mono_main): Using --verify-all enables the verifier under validil mode
	if no related --security flag is passed.

2008-05-05  Andreas Färber  <andreas.faerber@web.de>

	* mini-arch.h: Prepare support for ppc64.

	Contributed under MIT/X11 license.

2008-05-05  Andreas Färber  <andreas.faerber@web.de>

	* aot-runtime.c: Prepare support for ppc64.

	Contributed under MIT/X11 license.

2008-05-05  Andreas Färber  <andreas.faerber@web.de>

	* mini-ops.h: Prepare support for ppc64.

	Contributed under MIT/X11 license.

2008-05-04  Andreas Färber  <andreas.faerber@web.de>

	* helpers.c: Add support for OSX/ppc64 and Linux/ppc64 (dis)assemblers.

	Contributed under MIT/X11 license.
