@@ -4152,7 +4152,7 @@ emit_tree (MonoCompile *cfg, MonoBasicBlock *bblock, MonoInst *ins, const guint8
 }
 
 static inline MonoMethod *
-mini_get_method (MonoMethod *m, guint32 token, MonoClass *klass, MonoGenericContext *context)
+mini_get_method_allow_open (MonoMethod *m, guint32 token, MonoClass *klass, MonoGenericContext *context)
 {
 	MonoMethod *method;
 
@@ -4160,6 +4160,17 @@ mini_get_method (MonoMethod *m, guint32 token, MonoClass *klass, MonoGenericCont
 		return mono_method_get_wrapper_data (m, token);
 
 	method = mono_get_method_full (m->klass->image, token, klass, context);
+
+	return method;
+}
+
+static inline MonoMethod *
+mini_get_method (MonoMethod *m, guint32 token, MonoClass *klass, MonoGenericContext *context)
+{
+	MonoMethod *method = mini_get_method_allow_open (m, token, klass, context);
+
+	if (method && mono_class_is_open_constructed_type (&method->klass->byval_arg))
+		return NULL;
 
 	return method;
 }
@@ -5396,7 +5407,7 @@ mono_method_to_ir (MonoCompile *cfg, MonoMethod *method, MonoBasicBlock *start_b
 				if (!dont_verify && !cfg->skip_visibility) {
 					MonoMethod *target_method = cil_method;
 					if (method->is_inflated) {
-						target_method = mini_get_method (method, token, NULL, &method_definition->generic_container->context);
+						target_method = mini_get_method_allow_open (method, token, NULL, &method_definition->generic_container->context);
 					}
 					if (!mono_method_can_access_method (method_definition, target_method) &&
 						!mono_method_can_access_method (method, cil_method))
